//============================================================================//
//                                                                            //
//                         Copyright Â© 2015 Sandpolis                         //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation.                                   //
//                                                                            //
//============================================================================//
syntax = "proto3";

package core.instance;

option java_package = "com.sandpolis.core.instance";
option optimize_for = CODE_SIZE;

message ProtoAttributeValue {

    // The timestamp associated with the value
    int64 timestamp = 1;

    oneof SingularType {
        bytes   bytes    = 2;
        string  string   = 3;
        int32   integer  = 4;
        int64   long     = 5;
        bool    boolean  = 6;
        double  double   = 7;
        int32   instance_type  = 8;
        int32   os_type  = 9;
    }

    repeated string  string_array   = 30;
    repeated int32   integer_array  = 40;
    repeated int64   long_array     = 50;
    repeated bool    boolean_array  = 60;
    repeated double  double_array   = 70;
}

message ProtoAttributeValues {
    repeated ProtoAttributeValue value = 1;
}

message ProtoSTObjectUpdate {

    // Removed documents and attributes
    repeated string removed = 1;

    // Changed attributes
    map<string, ProtoAttributeValues> changed = 2;
}
